<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PtuSelect">

    <View
        android:id="@+id/ptu_top_view"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/color1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/back_view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ptu_wave1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptu_top_view" />

    <View
        android:id="@+id/front_view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/ptu_wave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptu_top_view" />

    <ImageView
        android:id="@+id/ptu_logo"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="@+id/ptu_top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/ptu_logo" />

    <TextView
        android:id="@+id/b_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_tech"
        android:fontFamily="@font/raleway_semibold"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#FF6E40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptu_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.13"/>
    <TextView
        android:id="@+id/dept_text"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/b_tech"
        app:layout_constraintBottom_toTopOf="@+id/dept_dropdown"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0.9"
        android:text="@string/department"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/dept_dropdown"
        android:entries="@array/dept"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dept_text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <TextView
        android:id="@+id/year_text"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/dept_dropdown"
        app:layout_constraintBottom_toTopOf="@+id/year_dropdown"
        app:layout_constraintVertical_bias="0.9"
        android:layout_marginTop="30dp"
        android:text="@string/year"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/black"
        />
    <Spinner
        android:entries="@array/year"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/year_dropdown"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_text" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/proceed_ptu"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/proceed"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/year_dropdown"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>