<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/contact_us_back"
        android:fitsSystemWindows="true"
        android:scaleType = "fitXY"/>

    <TextView
        android:id="@+id/contact_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/contact_us_txt"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:fontFamily="@font/raleway_bold"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/topic_txt"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_heading"
        android:layout_marginTop="30dp"
        android:hint="@string/subject_txt"
        android:background="@android:color/transparent"
        android:textSize="18sp"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/message_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/topic_txt"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/message_txt"
        android:inputType="textCapSentences|textMultiLine"
        android:scrollbars="vertical"
        android:textSize="15sp"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="@color/black"
        android:maxLines="15"/>

    <ImageView
        android:id="@+id/email_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/whatsapp_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_txt"
        app:layout_constraintVertical_bias="0.78"
        android:src="@drawable/email_btn"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/whatsapp_btn"
        app:layout_constraintStart_toEndOf="@+id/email_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_txt"
        app:layout_constraintVertical_bias="0.78"
        android:src="@drawable/whatsapp_btn"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:focusable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>